Comecei a escrever o conteudo

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 <body>
         <main>
             <header>
-                <h1>Titulo do Site</h1>
+                <h1>Cursos grátis</h1>
             </header>
             <article>
-                <h2>Artigo 001</h2>
+                <h2>Curso de HTML5</h2>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi hic pariatur autem itaque quaerat inventore mollitia omnis ipsum. Eos, iste. Nostrum fugit tempora natus? Voluptate quas incidunt laudantium earum animi.</p>
             </article>
             <article>
-                <h2>Artigo 002</h2>
+                <h2>Curso de JavaScript</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit maiores rerum mollitia ex et provident amet fuga iure, officiis sunt nobis. Quibusdam consectetur blanditiis explicabo voluptas sit corrupti voluptatibus officia.</p>
             </article>
         </main>
